# vkCookBook

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
Debug/: readme.md
Samples/: Step01-Creating_Logical_Device.cpp  Step02-Creating_Swapchain.cpp  Step03-Using_Render_Passes.cpp  Step04-Using_Graphics_Pipeline.cpp  Step05-Using_Combined_Image_Samplers.cpp  Step06-Using_Uniform_Buffers.cpp  Step07-Using_Push_Constants.cpp  Step08-Using_Tessellation_Shaders.cpp  Step09-Using_Geometry_Shaders.cpp  Step10-Using_Compute_Shaders.cpp  Step11-Drawing_Vertex_Normals.cpp  Step12-Using_Depth_Attachments.cpp
Samples/CH11/: S01-Rendering_a_geometry_with_vertex_diffuse_lighting.cpp  S02-Rendering_a_geometry_with_fragment_specular_lighting.cpp  S03-Rendering_a_normal_mapped_geometry.cpp  S04-Rendering_a_reflective_and_refractive_geometry_using_cubemaps.cpp  S05-Adding_shadows_to_the_scene.cpp
Samples/CH12/: S01-Drawing_a_skybox.cpp  S02-Drawing_bilboards_using_geometry_shaders.cpp  S03-Drawing_particles_using_compute_and_graphics_pipelines.cpp  S04-Rendering_a_tesselated_terrain.cpp  S05-Rendering_a_fullscreen_quad_for_postprocessing.cpp  S06-Using_input_attachment_for_color_correction_postprocess_effect.cpp
Samples/Common/: Camera.cpp  Camera.h  CookbookSampleFramework.cpp  CookbookSampleFramework.h  LICENSE  OS.cpp  OS.h  OrbitingCamera.cpp  OrbitingCamera.h
book/CH01/: CH01_Instance_and_Devices.h  S03_Connecting_with_a_Vulkan_Loader_library.cpp  S03_Connecting_with_a_Vulkan_Loader_library.h  S05_Loading_function_exported_from_a_Vulkan_Loader_library.cpp  S05_Loading_function_exported_from_a_Vulkan_Loader_library.h  S06_Loading_global_level_functions.cpp  S06_Loading_global_level_functions.h  S07_Checking_available_Instance_extensions.cpp  S07_Checking_available_Instance_extensions.h  S08_Creating_a_Vulkan_Instance.cpp  S08_Creating_a_Vulkan_Instance.h  S09_Loading_instance_level_functions.cpp  S09_Loading_instance_level_functions.h  S10_Enumerating_available_physical_devices.cpp  S10_Enumerating_available_physical_devices.h  S11_Checking_available_device_extensions.cpp  S11_Checking_available_device_extensions.h  S12_Getting_features_and_properties_of_a_physical_device.cpp  S12_Getting_features_and_properties_of_a_physical_device.h  S13_Checking_available_queue_families_and_their_properties.cpp  S13_Checking_available_queue_families_and_their_properties.h  S14_Selecting_index_of_a_queue_family_with_desired_capabilities.cpp  S14_Selecting_index_of_a_queue_family_with_desired_capabilities.h  S15_Creating_a_logical_device.cpp  S15_Creating_a_logical_device.h  S16_Loading_device_level_functions.cpp  S16_Loading_device_level_functions.h  S17_Getting_a_device_queue.cpp  S17_Getting_a_device_queue.h  S18_Creating_a_logical_device_with_geometry_shaders_and_graphics_queue.cpp  S18_Creating_a_logical_device_with_geometry_shaders_and_graphics_queue.h  S19_Destroying_a_logical_device.cpp  S19_Destroying_a_logical_device.h  S20_Destroying_a_Vulkan_Instance.cpp  S20_Destroying_a_Vulkan_Instance.h  S21_Releasing_a_Vulkan_Loader_library.cpp  S21_Releasing_a_Vulkan_Loader_library.h
book/CH02/: CH02_Image_Presentation.h  S01_Creating_a_Vulkan_Instance_with_WSI_extensions_enabled.cpp  S01_Creating_a_Vulkan_Instance_with_WSI_extensions_enabled.h  S02_Creating_a_presentation_surface.cpp  S02_Creating_a_presentation_surface.h  S03_Selecting_a_queue_family_that_supports_presentation_to_a_given_surface.cpp  S03_Selecting_a_queue_family_that_supports_presentation_to_a_given_surface.h  S04_Creating_a_logical_device_with_WSI_extensions_enabled.cpp  S04_Creating_a_logical_device_with_WSI_extensions_enabled.h  S05_Selecting_a_desired_presentation_mode.cpp  S05_Selecting_a_desired_presentation_mode.h  S06_Getting_capabilities_of_a_presentation_surface.cpp  S06_Getting_capabilities_of_a_presentation_surface.h  S07_Selecting_a_number_of_swapchain_images.cpp  S07_Selecting_a_number_of_swapchain_images.h  S08_Choosing_a_size_of_swapchain_images.cpp  S08_Choosing_a_size_of_swapchain_images.h  S09_Selecting_desired_usage_scenarios_of_swapchain_images.cpp  S09_Selecting_desired_usage_scenarios_of_swapchain_images.h  S10_Selecting_a_transformation_of_swapchain_images.cpp  S10_Selecting_a_transformation_of_swapchain_images.h  S11_Selecting_a_format_of_swapchain_images.cpp  S11_Selecting_a_format_of_swapchain_images.h  S12_Creating_a_swapchain.cpp  S12_Creating_a_swapchain.h  S13_Getting_handles_of_swapchain_images.cpp  S13_Getting_handles_of_swapchain_images.h  S14_Creating_a_swapchain_with_R8G8B8A8_format_and_a_MAILBOX_present_mode.cpp  S14_Creating_a_swapchain_with_R8G8B8A8_format_and_a_MAILBOX_present_mode.h  S15_Acquiring_a_swapchain_image.cpp  S15_Acquiring_a_swapchain_image.h  S16_Presenting_an_image.cpp  S16_Presenting_an_image.h  S17_Destroying_a_swapchain.cpp  S17_Destroying_a_swapchain.h  S18_Destroying_a_presentation_surface.cpp  S18_Destroying_a_presentation_surface.h
book/CH03/: CH03_Command_Buffers_and_Synchronization.h  S01_Creating_a_command_pool.cpp  S01_Creating_a_command_pool.h  S02_Allocating_command_buffers.cpp  S02_Allocating_command_buffers.h  S03_Beginning_a_command_buffer_recording_operation.cpp  S03_Beginning_a_command_buffer_recording_operation.h  S04_Ending_a_command_buffer_recording_operation.cpp  S04_Ending_a_command_buffer_recording_operation.h  S05_Resetting_a_command_buffer.cpp  S05_Resetting_a_command_buffer.h  S06_Resetting_a_command_pool.cpp  S06_Resetting_a_command_pool.h  S07_Creating_a_semaphore.cpp  S07_Creating_a_semaphore.h  S08_Creating_a_fence.cpp  S08_Creating_a_fence.h  S09_Waiting_for_fences.cpp  S09_Waiting_for_fences.h  S10_Resetting_fences.cpp  S10_Resetting_fences.h  S11_Submitting_command_buffers_to_the_queue.cpp  S11_Submitting_command_buffers_to_the_queue.h  S12_Synchronizing_two_command_buffers.cpp  S12_Synchronizing_two_command_buffers.h  S13_Checking_if_processing_of_a_submitted_command_buffer_has_finished.cpp  S13_Checking_if_processing_of_a_submitted_command_buffer_has_finished.h  S14_Waiting_until_all_commands_submitted_to_a_queue_are_finished.cpp  (+11 more)
(+227 files in other folders)
